--- a/Pipfile
+++ b/Pipfile
@@ -9,7 +9,8 @@ imessage-utils = {editable = true, git = "https://github.com/christo4b/imessage_
 langchain = "*"
 langchain-community = "*"
 langchain-core = "*"
-pydantic = "*"
+langchain-ollama = "*"
+pydantic = ">=2.0"
 click = "*"
 
 [dev-packages]
