working message reviewer agent

--- a/Pipfile
+++ b/Pipfile
@@ -12,6 +12,7 @@ langchain-core = "*"
 langchain-ollama = "*"
 pydantic = ">=2.0"
 click = "*"
+message-agent = {file = ".", editable = true}
 
 [dev-packages]
 
